# simple-agent-base

./: README.md  pyproject.toml
docs/: README.md  architecture.md  development.md  structured-output.md  tools.md  usage.md
examples/: README.md  basic_agent.py  chat_persistence.py  chat_session.py  chat_with_images.py  custom_provider.py  file_input.py  image_input.py  mcp_http_server.py  mcp_server.py  parallel_tools.py  reasoning.py  streaming.py  structured_output.py  structured_with_tools.py  sync_agent.py  sync_streaming.py  system_prompt.py  web_search.py
scripts/: live_e2e_test.py
skills/simple-agent-base/: SKILL.md
src/agent_harness/: __init__.py  agent.py  chat.py  sync_utils.py  types.py
src/agent_harness/providers/: openai.py
src/agent_harness/tools/: base.py  registry.py
src/simple_agent_base/: __init__.py  agent.py  chat.py  config.py  errors.py  json_types.py  mcp.py  sync_utils.py  types.py
src/simple_agent_base/providers/: __init__.py  base.py  openai.py
src/simple_agent_base/tools/: __init__.py  base.py  decorators.py  registry.py
tests/: test_agent.py  test_config.py  test_mcp.py  test_openai_provider.py  test_streaming.py  test_tools.py
tests/fixtures/: mcp_demo_server.py
