[project]
name = "simple-agent-base"
version = "0.1.0"
description = "Async-first base harness for building OpenAI-powered agents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai[aiohttp]>=2.32.0",
    "pydantic>=2.13.2",
    "pydantic-settings>=2.13.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/dzintt/simple-agent-base"
Repository = "https://github.com/dzintt/simple-agent-base"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_harness"]

[tool.pytest.ini_options]
testpaths = ["tests"]
